branch working on wsl

--- a/tex/fiche.tex
+++ b/tex/fiche.tex
@@ -2,14 +2,14 @@
 
 \begin{document}
 
-\writing{le vélo}
-\writing{castor}
-\writing{un chapeau}
-\writing{un vœu}
-\writing{une grue}
-\writing{une excuse}
-\writing{je vais}
-\writing{une boîte}
+\writing{cœur}
+\writing{bleu}
+\writing{monsieur}
+\writing{cheveux}
+\writing{feutre}
+\writing{j'ai peur}
+\writing{fauteuil}
+\writing{leur}
 \vspace{1cm}\large
 ~\\
 
@@ -17,41 +17,57 @@
 \begin{CJK}{UTF8}{min}
 \begin{tabular}{|q|q|q|q|q|q|}
 	\cline{1-3}
-	\multicolumn{3}{|c|}{足し算\pgfmathparse{int(5*5)}\pgfmathresultマス} \\
+	\multicolumn{3}{|c|}{掛算\pgfmathparse{int(5*5)}\pgfmathresultマス} \\
 
 	\hline
-	$+$ & 2 & 8 & 9 & 5 & 3 \\
+	$\times$ & 5 & 9 & 7 & 8 & 2 \\
 	\hline
-	8 &   &   &   &   &   \\
+	3 &   &   &   &   &   \\
 	\hline
 5 &   &   &   &   &   \\
 	\hline
-3 &   &   &   &   &   \\
+9 &   &   &   &   &   \\
 	\hline
-6 &   &   &   &   &   \\
+7 &   &   &   &   &   \\
 	\hline
 4 &   &   &   &   &   \\
 	\hline
 \end{tabular}
-\end{CJK}\qquad\qquad\begin{tabular}{ccc}
-	& 4 & 7\\
-	 $+$ & 3 & 4\\
+\end{CJK}
+\end{center}~\\
+
+\begin{center}
+\qquad\begin{tabular}{ccc}
+	& 8 & 1\\
+	 $+$ & 1 & 4\\
+	\hline
+	 & & \\
+\end{tabular}
+\qquad\begin{tabular}{ccc}
+	& 2 & 1\\
+	 $+$ & 6 & 9\\
 	\hline
 	 & & \\
 \end{tabular}
 \qquad\qquad\begin{tabular}{ccc}
-	& 4 & 6\\
-	 $+$ & 2 & 3\\
+	& 8 & 2\\
+	 $-$ & 3 & 9\\
 	\hline
 	 & & \\
 \end{tabular}
-
+\qquad\begin{tabular}{ccc}
+	& 7 & 3\\
+	 $-$ & 1 & 0\\
+	\hline
+	 & & \\
+\end{tabular}
+\qquad
 \end{center}
 
 ~\\
 
 {\fontfamily{phv}\selectfont
-Ce matin, mon lapin s'est enfui dans le jardin. Sur son chemin, il a rencontré un petit lutin. \og{}Je suis le lutin du père Noël !\fg{} a dit ce drôle de gamin. \og{}Et moi le lapin d'Alice !\fg{} a répondu mon lapin.
+
 }
 
 \end{document}
