better big operations

--- a/tex/fiche.tex
+++ b/tex/fiche.tex
@@ -2,16 +2,14 @@
 
 \begin{document}
 
-\writing{cœur}
-\writing{bleu}
-\writing{monsieur}
-\writing{cheveux}
-\writing{feutre}
-\writing{j'ai peur}
-\writing{fauteuil}
-\writing{leur}
+\writing{la temp\^{e}te}
+\writing{souvent}
+\writing{danser}
+\writing{pendant}
+\writing{orange}
+\writing{un paon}
 \vspace{1cm}\large
-~\\
+~\
 
 \begin{center}
 \begin{CJK}{UTF8}{min}
@@ -20,53 +18,43 @@
 	\multicolumn{3}{|c|}{掛算\pgfmathparse{int(5*5)}\pgfmathresultマス} \\
 
 	\hline
-	$\times$ & 5 & 9 & 7 & 8 & 2 \\
+	$\times$ & 3 & 5 & 2 & 8 & 7 \\
 	\hline
-	3 &   &   &   &   &   \\
+	5 &   &   &   &   &   \\
 	\hline
-5 &   &   &   &   &   \\
-	\hline
-9 &   &   &   &   &   \\
+3 &   &   &   &   &   \\
 	\hline
 7 &   &   &   &   &   \\
 	\hline
-4 &   &   &   &   &   \\
+6 &   &   &   &   &   \\
+	\hline
+9 &   &   &   &   &   \\
 	\hline
 \end{tabular}
 \end{CJK}
 \end{center}~\\
 
 \begin{center}
-\qquad\begin{tabular}{ccc}
-	& 8 & 1\\
-	 $+$ & 1 & 4\\
+\qquad\begin{tabular}{cccc}
+	& 2& 2& 5\\
+$+$& 4& 1& 5\\
 	\hline
 	 & & \\
 \end{tabular}
-\qquad\begin{tabular}{ccc}
-	& 2 & 1\\
-	 $+$ & 6 & 9\\
+\qquad\qquad\qquad\begin{tabular}{cccc}
+	& 9& 6& 5\\
+$-$& 7& 8& 0\\
 	\hline
 	 & & \\
 \end{tabular}
-\qquad\qquad\begin{tabular}{ccc}
-	& 8 & 2\\
-	 $-$ & 3 & 9\\
+\qquad\qquad\qquad\begin{tabular}{ccc}
+	& 5& 5\\
+$\times$& 9& 0\\
 	\hline
 	 & & \\
 \end{tabular}
-\qquad\begin{tabular}{ccc}
-	& 7 & 3\\
-	 $-$ & 1 & 0\\
-	\hline
-	 & & \\
-\end{tabular}
-\qquad
-\end{center}
-
-~\\
-
-{\fontfamily{phv}\selectfont
+\qquad\qquad
+\end{center}{\fontfamily{phv}\selectfont
 
 }
 
